--- a/Bukhari6 cb5889af98484de09e87483974b4e18d.md
+++ b/Bukhari6 cb5889af98484de09e87483974b4e18d.md
@@ -1,17 +1,11 @@
-# Bukhari6
-
-Created: April 23, 2023 10:27 PM
-Updated: April 23, 2023 10:27 PM
-URL: http://bewley.virtualave.net/bukhari6.html#12
-
-# Bukhari6
+# Bukhari 6
 
 **Chapter 12. The *Sutra* of
 the One who Prays**
 
 **I: The Imam's *sutra* is also the *sutra* for those behind him**
 
-[471](http://bewley.virtualave.net/muw3.html#t41). It is related that Ibn 'Abbas said, "I came
+471. It is related that Ibn 'Abbas said, "I came
 riding up on a donkey while the Messenger of Allah, may Allah bless him and
 grant him peace, was leading the people in prayer at Mina, and I was at that
 time nearing puberty. I passed in front of part of the row, dismounted, sent
@@ -137,7 +131,7 @@ He said, "If he will not stop without your using force, then use force."
 
 It is related that Abu Sa'id said that the Prophet said: [the next hadith].
 
-[487](http://bewley.virtualave.net/muw3.html#t36). It is related that Abu Salih as-Samman said,
+[487#t36). It is related that Abu Salih as-Samman said,
 "I saw Abu Sa'id al-Khudri praying on the day of *Jumu'a* towards something
 which was acting as *sutra* for him. A young man from the Banu Mu'ayt
 wanted to pass directly in front of him. Abu Sa'id pushed him in the chest.
@@ -155,7 +149,7 @@ a shaytan."'"
 **XI: The wrong action of someone who passes in front of somebody else
 praying**
 
-[488](http://bewley.virtualave.net/muw3.html#t37). It is related from Busr ibn Sa'id that Zayd
+488. It is related from Busr ibn Sa'id that Zayd
 ibn Khalid sent him to Abu Juhaym to ask him what he had heard from the Messenger
 of Allah, may Allah bless him and grant him peace, about someone passing
 in front of somebody else praying. Abu Juhaym said that the Messenger of
@@ -215,7 +209,7 @@ him and the *qibla* on the conjugal bed.'"
 
 **XVI: A small girl being carried on the shoulders during the prayer**
 
-[494](http://bewley.virtualave.net/muw3.html#t84). It is related from Abu Qatada al-Ansari
+[494#t84). It is related from Abu Qatada al-Ansari
 that the Messenger of Allah, may Allah bless him and grant him peace, used
 to pray carrying Umama, the daughter of Zaynab, the daughter of the Messenger
 of Allah, and Abu'l-'As ibn Rabi'a ibn 'Abdu Shams. When he prostrated, he
@@ -270,7 +264,7 @@ of the Prayer**
 Allah's words, *"The prayer is prescribed for the believers at set times"*
 (4:103) meaning He appointed times for them.
 
-[499](http://bewley.virtualave.net/muw1.html#1). It is related from Ibn Shihab that one day
+499. It is related from Ibn Shihab that one day
 'Umar ibn 'Abdu'l-'Aziz delayed the prayer. 'Urwa ibn az-Zubayr went to him
 and told him that one day in Iraq al-Mughira ibn Shu'ba had delayed the prayer
 and Abu Mas'ud al-Ansari had gone to him and said, "What is this, Mughira?
@@ -354,7 +348,7 @@ told me more."
 
 **V: The five prayers are expiation**
 
-[505](http://bewley.virtualave.net/muw3.html#t94). It is related from Abu Hurayra that he heard
+505. It is related from Abu Hurayra that he heard
 the Messenger of Allah, may Allah bless him and grant him peace, say, "What
 do you think would happen if there was a river by someone's door in which
 he washed five times every day? Do you think that any dirt would remain on
@@ -400,7 +394,7 @@ to his right. He is in close conversation with his Lord."
 **VIII: Waiting until it is cooler to pray *Dhuhr* when it is very
 hot**
 
-[510](http://bewley.virtualave.net/muw1.html#29). It is related from Abu Hurayra and 'Abdullah
+510. It is related from Abu Hurayra and 'Abdullah
 ibn 'Umar that the Messenger of Allah, may Allah bless him and grant him
 peace, said, "'Scorching heat is from the blast of Jahannam. So, when the
 heat is fierce, delay the prayer until it gets cooler.'"
@@ -513,7 +507,7 @@ He did not like sleeping before it or conversation after it. He used to leave
 from the morning prayer when a man could recognise the person sitting next
 to him and he would recite between sixty and a hundred *ayats*."
 
-[523](http://bewley.virtualave.net/muw1.html#10). It is related that Anas ibn Malik said, "We
+[523#10). It is related that Anas ibn Malik said, "We
 used to pray the *'Asr* prayer and then if one of us went out to the
 Banu 'Amr ibn 'Awf, we would find them praying *'Asr.*"
 
@@ -529,13 +523,13 @@ Allah bless him and grant him peace, used to pray *'Asr* when the sun
 was high and white. Someone could go to the 'Awali towns and reach them while the
 sun was still high. Some of the 'Awali towns were located about four miles or so from Madina."
 
-[526](http://bewley.virtualave.net/muw1.html#11). It is related that Anas ibn Malik said, "We
+[526#11). It is related that Anas ibn Malik said, "We
 used to pray *'Asr* and then it was still possible for one of us to
 go to Quba' and reach there while the sun was still high."
 
 **XIII: The wrong action of someone who misses *'Asr***
 
-[527](http://bewley.virtualave.net/muw1.html#21). It is related from Ibn 'Umar that the Messenger
+[527#21). It is related from Ibn 'Umar that the Messenger
 of Allah, may Allah bless him and grant him peace, said, "If anyone misses
 the prayer of *'Asr* is as if he had been deprived of his family and
 all his property."
@@ -559,7 +553,7 @@ sun and before its setting.'* (50:39)"
 
 Isma'il said, "Do not let that happen and do not miss it."
 
-[530](http://bewley.virtualave.net/muw3.html#t85). It is related from Abu Hurayra that the
+[530#t85). It is related from Abu Hurayra that the
 Messenger of Allah, may Allah bless him and grant him peace, said, "There
 are angels which take turns in being with you in the night and other angels
 in the day and they meet together at the prayers of *Fajr* and
@@ -801,7 +795,7 @@ said, "Enough time for a man to recite fifty *ayats*."
 with my family and then hurry to catch the *Fajr* prayer with the Messenger
 of Allah, may Allah bless him and grant him peace."
 
-[553](http://bewley.virtualave.net/muw1.html#4). It is related from 'Urwa ibn az-Zubayr
+[553#4). It is related from 'Urwa ibn az-Zubayr
 that 'A'isha reported, "The believing women used to attend the *Fajr*
 prayer with the Messenger of Allah, may Allah bless him and grant him peace,
 wrapped up in their garments and then return to their houses when they finished
@@ -809,7 +803,7 @@ the prayer and no one could recognise them because of how dark it was."
 
 **XXVII: The one who gets in one *rak'at* of *Fajr***
 
-[554](http://bewley.virtualave.net/muw1.html#5). It is related from Abu Hurayra that the Messenger
+554. It is related from Abu Hurayra that the Messenger
 of Allah, may Allah bless him and grant him peace, said, ""Whoever manages
 to perform a *rak'at* of *Subh* before the sun has risen has done
 *Subh* in time, and whoever manages to perform a rak'at of '*Asr*
@@ -817,7 +811,7 @@ before the sun has set has done *'Asr* in time.".
 
 **XXVIII: The one who catches one *rak'at* of the prayer**
 
-[555](http://bewley.virtualave.net/muw1.html#15). It is related from Abu Hurayra that the Messenger
+555. It is related from Abu Hurayra that the Messenger
 of Allah, may Allah bless him and grant him peace, said, "Whoever catches
 one *rak'at* of the prayer has caught the prayer."
 
@@ -851,7 +845,7 @@ a way that exposes the private parts to the sky, and the sales called
 
 **XXX: One should not seek to pray just before sunset**
 
-[560](http://bewley.virtualave.net/muw4.html#qu47). It is related from Ibn 'Umar that the Messenger
+560. It is related from Ibn 'Umar that the Messenger
 of Allah, may Allah bless him and grant him peace, said, "None of you should
 seek to pray as the sun is rising or as it is setting."
 
@@ -1024,9 +1018,3 @@ morning. There had been a treaty between us and some people and it had come
 to an end, so he divided us up into twelve men, each of whom had a group
 with him - only Allah knows how many there were with each man - and everyone
 of them ate from it." Or as he said.
-
----
-
-**[Return to Contents](http://bewley.virtualave.net/bukhcont.html)**
-
-**[Return to Home Page](http://bewley.virtualave.net/index.html)**
