--- a/Bukhari7 ec4f2d5f30e347dfa57e232660549701.md
+++ b/Bukhari7 ec4f2d5f30e347dfa57e232660549701.md
@@ -1,10 +1,4 @@
-# Bukhari7
-
-Created: April 23, 2023 10:27 PM
-Updated: April 23, 2023 10:27 PM
-URL: http://bewley.virtualave.net/bukhari7.html#14
-
-# Bukhari7
+# Bukhari 7
 
 **Chapter 14. Book of the *Adhan***
 
@@ -51,7 +45,7 @@ Isma'il said, "I mentioned that to Ayyub and he said, 'Except the
 
 **IV: The excellence of the *adhan***
 
-[583](http://bewley.virtualave.net/muw2.html#6). It is related from Abu Hurayra that the Messenger
+583. It is related from Abu Hurayra that the Messenger
 of Allah, may Allah bless him and grant him peace, said, "When the call to
 prayer is done Shaytan retreats, farting so that he will not hear it. When
 the call is finished he comes back again until the iqama is done, when he
@@ -65,7 +59,7 @@ until the man does not know how much he has prayed."
 'Umar ibn 'Abdu'l-'Aziz said, "Give the *adhan* without elongating it
 or making it too ornate or we will dismiss you."
 
-[584](http://bewley.virtualave.net/muw2.html#5). It is related that Abu Sa'id al-Khudri said
+584. It is related that Abu Sa'id al-Khudri said
 (to Abu Sa'sa' al Ansari), "I see that you love sheep and the desert. When
 you are among your sheep or in the desert, give the call to prayer and raise
 your voice when doing it. No jinn or man or anything within range hears the
@@ -92,7 +86,7 @@ it is a bad morning indeed for those who have been warned.' "
 
 **VII: What should be said on hearing the call to prayer**
 
-[586](http://bewley.virtualave.net/muw2.html#2). It is related from Abu Sa'id al-Khudri that
+586. It is related from Abu Sa'id al-Khudri that
 the Messenger of Allah, may Allah bless him and grant him peace, said, "When
 you hear the *adhan*, repeat what the mu'adhdhin says."
 
@@ -121,7 +115,7 @@ on the Day of Rising."
 It is mentioned that some people disagreed about the *adhan* and Sa'd
 had them draw lots among themselves.
 
-[590](http://bewley.virtualave.net/muw2.html#3). It is related that Abu Hurayra said, "If people
+[5903). It is related that Abu Hurayra said, "If people
 only knew what was in the call to prayer and the first row, and could find
 no other way to get it than drawing lots for it, they would draw lots for
 it. If they only knew what was in going early to the prayer, they would race
@@ -142,7 +136,7 @@ at one another [in disapproval] so he said, 'One who is better than him did this
 **XI: A blind person calling the *adhan* when there is someone to inform
 him**
 
-[592](http://bewley.virtualave.net/muw2.html#16). It is related from Salim ibn 'Abdullah that
+[59216). It is related from Salim ibn 'Abdullah that
 his father said that the Messenger of Allah, may Allah bless him and grant
 him peace, said, "Bilal calls the *adhan* during the night, so eat and
 drink until Ibn Umm Maktum calls the *adhan*." Then he said, "He was
@@ -151,7 +145,7 @@ a blind man who did not call the *adhan* until someone said to him,
 
 **XII: The *adhan* after the time of *Fajr***
 
-[593](http://bewley.virtualave.net/muw3.html#29). It is related from Hafsa that when the
+[59329). It is related from Hafsa that when the
 *mu'adhdhin* withdrew to call the *adhan* of *Subh* and daybreak
 appeared, the Messenger of Allah, may Allah bless him and grant him peace,
 prayed two short *rak'ats* before the *iqama* of the prayer was
@@ -259,7 +253,7 @@ have seen me pray. When it is time for the prayer, one of you should give
 the *adhan* on behalf of all of you and the oldest of you should be
 the Imam.'"
 
-[606](http://bewley.virtualave.net/muw2.html#11). It is related that Nafi' said, "Ibn 'Umar
+606. It is related that Nafi' said, "Ibn 'Umar
 gave the *adhan* at Dajnan on a cold night and then said, 'Pray in your
 houses.' He told us that the Messenger of Allah, may Allah bless him and
 grant him peace, had ordered the *mu'adhdhin* to give the adhan and
@@ -308,7 +302,7 @@ dignity.**
 "Pray as much as you catch and complete anything you have missed." Abu Qatada
 said that the Prophet, may Allah bless him and grant him peace, said it.
 
-[610](http://bewley.virtualave.net/muw2.html#4). It is related from Abu Hurayra that the Prophet,
+610. It is related from Abu Hurayra that the Prophet,
 may Allah bless him and grant him peace, said, "When you hear the
 *iqama*, go to the prayer and you should be tranquil and dignified.
 Do not hurry. Pray as much as you catch and complete anything you have missed."
@@ -381,7 +375,7 @@ the Imam**
 Al-Hasan said, "When someone's mother forbids him to go to the group prayer
 of *'Isha'* out of compassion for him he should not obey her."
 
-[618](http://bewley.virtualave.net/muw3.html#j3). It is related from Abu Hurayra said that
+618. It is related from Abu Hurayra said that
 Messenger of Allah, may Allah bless him and grant him peace, said, "By Him
 in Whose hand my soul is, I seriously considered ordering someone to collect
 firewood, ordering the prayer be called, appointing a man to lead the prayer
@@ -396,7 +390,7 @@ When al-Aswad missed the group prayer, he went to another mosque. Anas came
 to a mosque where the prayer had been said, did the adhan, stood up and prayed
 in a group.
 
-[619](http://bewley.virtualave.net/muw3.html#j1). It is related from 'Abdullah ibn 'Umar that
+[619j1). It is related from 'Abdullah ibn 'Umar that
 the Messenger of Allah, may Allah bless him and grant him peace, said, "Prayer
 in a group is twenty-seven times better than the prayer of a man by himself."
 
@@ -416,7 +410,7 @@ he is waiting for the prayer."
 
 **III: The excellence of doing the *Fajr* prayer in a group**
 
-[621](http://bewley.virtualave.net/muw3.html#j2). It is related that Abu Hurayra said, "I heard
+621. It is related that Abu Hurayra said, "I heard
 the Messenger of Allah, may Allah bless him and grant him peace, say, "The
 excellence of the group prayer is twenty-five times that of the prayer of
 one of you alone. The angels of the night and the angels of the day meet
@@ -440,7 +434,7 @@ than someone who prays and then goes to sleep."
 
 **IV: The excellence of doing *Dhuhr* early in its time**
 
-[624](http://bewley.virtualave.net/muw3.html#j6). It is related from Abu Hurayra that the Messenger
+624. It is related from Abu Hurayra that the Messenger
 of Allah, may Allah bless him and grant him peace, said, "If a man who is
 walking along on a road finds a thorny branch in the road and removes it,
 Allah thanks him for doing it and forgives him." Then he said, "There are
@@ -490,7 +484,7 @@ elder should act as the Imam."
 **VIII: Someone who sits in the mosque waiting for the prayer and the excellence
 of mosques**
 
-[628](http://bewley.virtualave.net/muw3.html#t54). It is related from Abu Hurayra that the
+[628t54). It is related from Abu Hurayra that the
 Messenger of Allah, may Allah bless him and grant him peace, said, "The angels
 pray for every one of you as long as you remain in the place in which you
 prayed and do not break *wudu'*, saying, 'O Allah, forgive him! O Allah,
@@ -743,7 +737,7 @@ Another *isnad*.
 
 **XIX: Someone standing beside the imam if there is a good reason for it**
 
-[651](http://bewley.virtualave.net/muw3.html#j19). It is related that 'A'isha said, "The Messenger
+651. It is related that 'A'isha said, "The Messenger
 of Allah, may Allah bless him and grant him peace, ordered Abu Bakr to lead
 the people in prayer during his illness, and he led them in the prayer."
 'Urwa said, "The Messenger of Allah, may Allah bless him and grant him peace,
@@ -760,7 +754,7 @@ Imam comes, his prayer is valid whether he retires or not.**
 'A'isha related something concerning this matter from the Prophet, may Allah
 bless him and grant him peace.
 
-[652](http://bewley.virtualave.net/muw3.html#t64). It is related from Sahl ibn Sa'd as-Sa'idi
+652. It is related from Sahl ibn Sa'd as-Sa'idi
 that the Messenger of Allah, may Allah bless him and grant him peace, went
 to make peace among the Banu 'Amr ibn 'Awf and the time for the prayer came [while he was away doing this]. .
 The *mu'adhdhin* came to Abu Bakr and asked, "Will you lead the prayer and
@@ -855,7 +849,7 @@ him her *hadith*. He did not disacknowledge any of it although he asked,
 'Did she name to you the man who was with al-'Abbas?' I answered, 'No.' He said,
 'It was 'Ali.' "
 
-[656](http://bewley.virtualave.net/muw3.html#j18). It is related that 'A'isha, Umm al-Mu'minin,
+656. It is related that 'A'isha, Umm al-Mu'minin,
 said, "The Messenger of Allah, may Allah bless him and grant him peace, once
 prayed in his room when he was ill. He prayed sitting down and some people
 prayed behind him standing. He indicated to them to sit down. When he had
@@ -863,7 +857,7 @@ finished, he said, 'The Imam is only appointed to be followed. When he goes
 into *ruku'*, go into *ruku'*, and when he rises, rise and if he
 prays sitting down, pray sitting down.' "
 
-[657](http://bewley.virtualave.net/muw3.html#j17). It is related from Anas ibn Malik, "The
+657. It is related from Anas ibn Malik, "The
 Messenger of Allah, may Allah bless him and grant him peace, fell off his
 horse when riding, and his right side was grazed, so he did one of the prayers
 sitting down, and we prayed behind him sitting down. When he had finished
@@ -1001,7 +995,7 @@ are those who are weak, old and have things they must do.' "
 **XXXIV: When praying alone, you can lengthen the prayer as much as you
 wish**
 
-[671](http://bewley.virtualave.net/muw3.html#j14). It is related from Abu Hurayra that the
+671. It is related from Abu Hurayra that the
 Messenger of Allah, may Allah bless him and grant him peace, said, "When
 any of you leads other people in prayer, he should shorten it, for among
 you are those who are weak, the sick and the old. When you pray by yourself, you can
@@ -1137,7 +1131,7 @@ and then said the *salam* and did two *sajdas*."
 'Abdullah ibn Shaddad said, "While I was in the last row I heard 'Umar sobbing
 as he recited, *'I complain of my grief and sorrow to Allah.'* (12:86)"
 
-684. See [647](http://bewley.virtualave.net/bukhari7.html#647).
+684. See 647.
 
 **XLII: Making the rows straight at the time of the *iqama* and after
 it**
@@ -1171,7 +1165,7 @@ in the call to prayer and the first row, they would draw lots for it."
 
 **XLV: Making the row straight is part of doing the prayer correctly**
 
-[689](http://bewley.virtualave.net/muw2.html#61). It is related from Abu Hurayra from the Prophet,
+689. It is related from Abu Hurayra from the Prophet,
 may Allah bless him and grant him peace, "The imam was appointed to be followed
 so do not differ from what he does. When he goes into *ruku'*, go into
 *ruku*'. When he says, 'Allah hears whoever praises him,' say, 'Our
@@ -1256,9 +1250,3 @@ my people, pray in your homes. A man's best prayer is the one he prays in
 his house with the exception of the obligatory prayer."
 
 Different *isnad* from Zayd.
-
----
-
-**[Return to Contents](http://bewley.virtualave.net/bukhcont.html)**
-
-**[Return to Home Page](http://bewley.virtualave.net/index.html)**
